--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
 
     <p id="main-subtitle" class="text-center">Somos o site com mais vagas de tecnologia do mercado, direcionadas a Home Office</p>
 
-    <form action="" id="search-form" class="form-inline">
+    <form action="/" id="search-form" class="form-inline" method="get">
 
         <div class="form-group col-md-10">
 
@@ -31,92 +31,44 @@
 
             <div class="col-md-12">
 
-                <h2 id="job-list-title">
-                    Veja as nossas vagas em destaque!
-                </h2>
+                {{#if search}}
+
+                    <h2 id="job-list-title">
+                        Buscando vagas que contenham: {{search}}
+                    </h2>
+
+                {{else}}
+
+                    <h2 id="job-list-title">
+                        Veja as nossas vagas em destaque!
+                    </h2>
+
+                {{/if}}
 
                 <ul id="job-list" class="list-group">
-                    <li class="list-group-item new-job">
 
-                        <img src="/img/company.svg" alt="image of company">
+                    {{#each jobs}}
 
-                        <p>Empresa</p>
+                        <li class="list-group-item new-job">
 
-                        <h2>Título da vaga</h2>
+                            <img src="/img/company.svg" alt="image of company">
 
-                        <p>R$ 2000,0</p>
+                            <p>{{ dataValues.company }}</p>
 
-                        <span class="new-job-label">
-                            Nova
-                        </span>
+                            <h2>{{ dataValues.title }}</h2>
 
-                        <a href="" class="btn btn-primary">Ver Vaga</a>
+                            <p>R$ {{ dataValues.salary }}</p>
 
-                    </li>
-                </ul>
+                            <span class="new-job-label">
+                                Nova
+                            </span>
 
-                <ul id="job-list" class="list-group">
-                    <li class="list-group-item">
+                            <a href="" class="btn btn-primary">Ver Vaga</a>
 
-                        <img src="/img/company.svg" alt="image of company">
+                        </li>
 
-                        <p>Empresa</p>
+                    {{/each}}
 
-                        <h2>Título da vaga</h2>
-
-                        <p>R$ 2000,0</p>
-
-                        <a href="" class="btn btn-primary">Ver Vaga</a>
-
-                    </li>
-                </ul>
-
-                <ul id="job-list" class="list-group">
-                    <li class="list-group-item">
-
-                        <img src="/img/company.svg" alt="image of company">
-
-                        <p>Empresa</p>
-
-                        <h2>Título da vaga</h2>
-
-                        <p>R$ 2000,0</p>
-
-                        <a href="" class="btn btn-primary">Ver Vaga</a>
-
-                    </li>
-                </ul>
-
-                <ul id="job-list" class="list-group">
-                    <li class="list-group-item">
-
-                        <img src="/img/company.svg" alt="image of company">
-
-                        <p>Empresa</p>
-
-                        <h2>Título da vaga</h2>
-
-                        <p>R$ 2000,0</p>
-
-                        <a href="" class="btn btn-primary">Ver Vaga</a>
-
-                    </li>
-                </ul>
-
-                <ul id="job-list" class="list-group">
-                    <li class="list-group-item">
-
-                        <img src="/img/company.svg" alt="image of company">
-
-                        <p>Empresa</p>
-
-                        <h2>Título da vaga</h2>
-
-                        <p>R$ 2000,0</p>
-
-                        <a href="" class="btn btn-primary">Ver Vaga</a>
-
-                    </li>
                 </ul>
 
             </div>
