feat: adding data in db via form

--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -14,7 +14,7 @@
 
     <h2>Preencha os dados da melhor forma possível para encontrar mais rápido seu dev!</h2>
 
-    <form action="">
+    <form action="/jobs/add" method="post">
 
         <div class="form-group">
 
