feat: creating job vacancy details

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -63,7 +63,7 @@
                                 Nova
                             </span>
 
-                            <a href="" class="btn btn-primary">Ver Vaga</a>
+                            <a href="/jobs/view/{{ dataValues.id }}" class="btn btn-primary">Ver Vaga</a>
 
                         </li>
 
